--- a/src/index.css
+++ b/src/index.css
@@ -18,12 +18,20 @@
   }
 }
 @layer shadows {
-  .shadow-inner {
-    box-shadow: 8px 8px 10px -2px rgba(179, 159, 124, 0.2) inset;
-    -webkit-box-shadow: 8px 8px 10px -2px rgba(179, 159, 124, 0.2) inset;
-    -moz-box-shadow: 8px 8px 10px -2px rgba(179, 159, 124, 0.2) inset;
+  .shadow-outer {
+    box-shadow: 1px 2px 2px 0px rgba(179, 159, 124, 1);
+    -webkit-box-shadow: 1px 2px 2px 0px rgba(179, 159, 124, 1);
+    -moz-box-shadow: 1px 2px 2px 0px rgba(179, 159, 124, 1);
   }
   .shadow1 {
     box-shadow: inset 1px 1px 1px #00000040;
+  }
+  .shadow-btn {
+    box-shadow: 0px 2px 2px 0px rgba(28, 146, 169, 1);
+    -webkit-box-shadow: 0px 2px 2px 0px rgba(28, 146, 169, 1);
+    -moz-box-shadow: 0px 2px 2px 0px rgba(28, 146, 169, 1);
+  }
+  .shadow2 {
+    box-shadow: 0 1px 2px #00000073;
   }
 }
